--- a/contacts.html
+++ b/contacts.html
@@ -176,7 +176,7 @@
         <p>
           <strong>Bergvia Family Office</strong><br>
           Switzerland<br>
-          📧 <a href="mailto:info@bergvia.ch">info@bergvia.com</a>
+          📧 <a href="mailto:info@bergvia.ch">info@bergvia.ch</a>
         </p>
     </section>
   </main>
