--- a/privacy.html
+++ b/privacy.html
@@ -148,7 +148,7 @@
     <h2>9. Contact</h2>
     <p>For any privacy-related inquiries, please contact us at:<br>
     Xtraxfin SA<br>
-    Email: <a href="mailto:privacy@bergvia.com">privacy@bergvia.com</a><br>
+    Email: <a href="mailto:privacy@bergvia.ch">privacy@bergvia.ch</a><br>
     Registered Office: Pfäffikon, SZ, Switzerland</p>
   </main>
 
