--- a/contacts.html
+++ b/contacts.html
@@ -12,68 +12,102 @@
       color: #333;
       margin: 0;
       line-height: 1.8;
-      /* FLUID TYPOGRAPHY for body text */
       font-size: clamp(16px, 1.2vw, 18px);
     }
+    a { text-decoration: none; }
 
-    /* --- Header & Navigation (As Provided - UNTOUCHED) --- */
+    /* --- CORRECTED HEADER & NAVIGATION --- */
     header {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      z-index: 10;
+      z-index: 2000;
+      padding: 20px 40px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 40px;
-      box-sizing: border-box;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      flex-wrap: wrap;
       background: transparent;
+      box-sizing: border-box;
     }
-    nav {
+    .desktop-nav {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
+      gap: 20px;
     }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: #ffffff; /* White text for floating header */
+    .desktop-nav a {
+      color: #ffffff;
       font-family: sans-serif;
       font-size: 16px;
       letter-spacing: 1px;
-      transition: color 0.3s;
       text-shadow: 0 1px 2px rgba(0,0,0,0.5);
     }
-    nav a:hover,
-    nav a.active {
-      color: #fff;
+    .desktop-nav a:hover,
+    .desktop-nav a.active {
       text-decoration: underline;
     }
     .logo img {
       height: 70px;
       width: auto;
-      max-width: 100%;
-      transition: all 0.3s ease;
+      transition: 0.3s;
+      filter: brightness(0) invert(1);
     }
 
-    /* --- Mobile Adjustments for header (As Provided - UNTOUCHED) --- */
+    /* --- CORRECTED MOBILE MENU BUTTON & PANEL --- */
+    .mobile-menu-button {
+      display: none;
+      font-size: 32px;
+      cursor: pointer;
+      color: #ffffff;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.6);
+      z-index: 3000;
+    }
+    .mobile-nav {
+      display: none;
+      position: fixed;
+      top: 0;
+      right: -100%;
+      width: 70%;
+      height: 100%;
+      background: rgba(255,255,255,0.98);
+      padding: 80px 30px;
+      box-sizing: border-box;
+      transition: right 0.35s ease;
+      z-index: 2500;
+    }
+    .mobile-nav.open {
+      right: 0;
+    }
+    .mobile-nav a {
+      display: block;
+      margin-bottom: 25px;
+      font-size: 22px;
+      color: #000;
+      font-family: sans-serif;
+    }
+    .mobile-menu-close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 40px;
+      color: #000;
+      cursor: pointer;
+      font-family: sans-serif;
+      font-weight: 300;
+    }
+
+    /* --- CORRECTED Mobile Breakpoints --- */
     @media (max-width: 768px) {
-      header { flex-direction: row; justify-content: space-between; padding: 15px 20px; }
-      nav a { margin: 0 8px; font-size: 14px; }
+      .desktop-nav { display: none; }
+      .mobile-menu-button { display: block; }
       .logo img { height: 50px; }
+      .mobile-nav { display: block; }
     }
     @media (max-width: 480px) {
-      header { flex-direction: column; align-items: center; }
-      .logo { order: -1; margin-bottom: 15px; }
-      nav { width: 100%; justify-content: center; }
-      .logo img { height: 45px; }
+      .logo img { height: 42px; }
     }
 
-    /* --- Hero Section --- */
+
+    /* --- Hero Section (Untouched) --- */
     .page-hero {
       height: 70vh;
       min-height: 500px;
@@ -98,11 +132,10 @@
       font-weight: normal;
       margin: 0 0 20px 0;
       line-height: 1.3;
-      /* FLUID TYPOGRAPHY for hero title */
       font-size: clamp(26px, 3vw, 40px);
     }
 
-    /* --- Page Content --- */
+    /* --- Page Content (Untouched) --- */
     .page-content {
       max-width: 900px;
       margin: 100px auto;
@@ -117,25 +150,15 @@
     .page-content a:hover {
         border-bottom: 1px solid #000;
     }
+    
+    /* --- Mobile adjustments for content (Untouched) --- */
+    @media (max-width: 1024px) { .hero-content { padding: 150px 40px 0 80px; } }
+    @media (max-width: 768px) { .page-hero { height: 60vh; } .hero-content { padding: 150px 30px 0 30px; } .page-content { padding: 0 30px; margin: 80px auto; } }
+    @media (max-width: 480px) { .page-hero { height: 50vh; } .hero-content { padding: 120px 20px 0 20px; } .page-content { padding: 0 20px; margin: 60px auto; } }
 
-    /* --- SIMPLIFIED Mobile Adjustments (Layout only) --- */
-    @media (max-width: 1024px) {
-      .hero-content { padding: 150px 40px 0 80px; }
-    }
-    @media (max-width: 768px) {
-      .page-hero { height: 60vh; }
-      .hero-content { padding: 150px 30px 0 30px; }
-      .page-content { padding: 0 30px; margin: 80px auto; }
-    }
-    @media (max-width: 480px) {
-      .page-hero { height: 50vh; }
-      .hero-content { padding: 120px 20px 0 20px; }
-      .page-content { padding: 0 20px; margin: 60px auto; }
-    }
-
-    /* --- Footer --- */
+    /* --- Footer (Untouched) --- */
     footer { text-align: center; font-size: 14px; padding: 40px 20px; background-color: #f8f8f8; border-top: 1px solid #ddd; font-family: sans-serif; }
-    .footer-nav a { color: #555; text-decoration: none; margin: 0 15px; transition: color 0.3s; }
+    .footer-nav a { color: #555; text-decoration: none; margin: 0 15px; }
     .footer-nav a:hover { color: #000; }
     .copyright { margin-top: 20px; color: #999; }
   </style>
@@ -144,20 +167,27 @@
 <body>
 
   <header>
-    <nav>
-      <a href="index.html">Home</a> 
-      <a href="about.html">About</a> 
-      <a href="investments.html">Investments</a>
-    </nav>
     <div class="logo">
       <a href="index.html">
-        <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Family Office Logo">
+        <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Logo">
       </a>
     </div>
-    <nav>
+    <nav class="desktop-nav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="investments.html">Investments</a>
       <a href="contacts.html" class="active">Contacts</a>
     </nav>
+    <div class="mobile-menu-button" onclick="toggleMobileMenu()">☰</div>
   </header>
+
+  <div class="mobile-nav" id="mobileNav">
+    <div class="mobile-menu-close" onclick="toggleMobileMenu()">×</div>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="investments.html">Investments</a>
+    <a href="contacts.html">Contacts</a>
+  </div>
 
   <main>
     <section class="page-hero">
@@ -193,6 +223,12 @@
       © 2025, Bergvia Family Office. All Rights Reserved.<br>Bergvia Family Office is a private investment company managing the assets of a single family.
     </p>
   </footer>
+
+  <script>
+    function toggleMobileMenu() {
+      document.getElementById("mobileNav").classList.toggle("open");
+    }
+  </script>
 
 </body>
 </html>
