--- a/privacy.html
+++ b/privacy.html
@@ -14,6 +14,7 @@
       line-height: 1.8;
       font-size: clamp(16px, 1.2vw, 18px);
     }
+    a { text-decoration: none; }
 
     /* --- CORRECTED HEADER & NAVIGATION --- */
     header {
@@ -24,34 +25,80 @@
       box-sizing: border-box;
       border-bottom: 1px solid #eee;
     }
-    .nav-left, .nav-right {
+    .desktop-nav {
       display: flex;
-      align-items: center;
-      width: 33.33%;
+      gap: 20px;
     }
-    .nav-left { justify-content: flex-start; }
-    .nav-right { justify-content: flex-end; }
-    .logo { display: flex; justify-content: center; width: 33.33%; }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
+    .desktop-nav a {
       color: #555;
       font-family: sans-serif;
       font-size: 16px;
       letter-spacing: 1px;
-      transition: color 0.3s;
-      white-space: nowrap;
     }
-    nav a:hover, nav a.active {
+    .desktop-nav a:hover,
+    .desktop-nav a.active {
       color: #000;
       text-decoration: underline;
     }
     .logo img {
       height: 70px;
       width: auto;
-      max-width: 100%;
-      transition: all 0.3s ease;
+      transition: 0.3s;
     }
+
+    /* --- CORRECTED MOBILE MENU BUTTON & PANEL --- */
+    .mobile-menu-button {
+      display: none;
+      font-size: 32px;
+      cursor: pointer;
+      color: #333; /* Black hamburger on white background */
+      z-index: 3000;
+    }
+    .mobile-nav {
+      display: none;
+      position: fixed;
+      top: 0;
+      right: -100%;
+      width: 70%;
+      height: 100%;
+      background: rgba(255,255,255,0.98);
+      padding: 80px 30px;
+      box-sizing: border-box;
+      transition: right 0.35s ease;
+      z-index: 2500;
+    }
+    .mobile-nav.open {
+      right: 0;
+    }
+    .mobile-nav a {
+      display: block;
+      margin-bottom: 25px;
+      font-size: 22px;
+      color: #000;
+      font-family: sans-serif;
+    }
+    .mobile-menu-close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 40px;
+      color: #000;
+      cursor: pointer;
+      font-family: sans-serif;
+      font-weight: 300;
+    }
+
+    /* --- CORRECTED Mobile Breakpoints --- */
+    @media (max-width: 768px) {
+      .desktop-nav { display: none; }
+      .mobile-menu-button { display: block; }
+      .logo img { height: 50px; }
+      .mobile-nav { display: block; }
+    }
+    @media (max-width: 480px) {
+      .logo img { height: 42px; }
+    }
+
 
     /* --- Main Content Area --- */
     main {
@@ -60,42 +107,35 @@
       padding: 0 40px;
     }
     h1 {
-      font-weight: normal;
-      color: #000;
-      margin-bottom: 40px;
-      border-bottom: 1px solid #ddd;
-      padding-bottom: 20px;
-      font-size: clamp(28px, 3.5vw, 38px);
+        font-weight: normal;
+        color: #000;
+        margin-bottom: 40px;
+        border-bottom: 1px solid #ddd;
+        padding-bottom: 20px;
+        font-size: clamp(28px, 3.5vw, 38px);
     }
     h2 {
-      font-weight: normal;
-      color: #000;
-      margin-top: 40px;
-      font-size: clamp(20px, 2.5vw, 24px);
+        font-weight: normal;
+        color: #000;
+        margin-top: 40px;
+        font-size: clamp(20px, 2.5vw, 24px);
     }
     p { margin-bottom: 20px; }
-    a { color: #333; text-decoration: none; border-bottom: 1px dotted #555; }
+    a { color: #333; border-bottom: 1px dotted #555; }
     a:hover { border-bottom: 1px solid #000; }
     header a, .footer-nav a { border-bottom: none; }
 
-    /* --- CORRECTED Mobile Adjustments --- */
+    /* --- Mobile adjustments for content --- */
     @media (max-width: 768px) {
-      header { padding: 15px 20px; }
-      .logo img { height: 50px; }
-      nav a { margin: 0 8px; font-size: 14px; }
       main { padding: 0 20px; margin-top: 60px; }
     }
-    @media (max-width: 600px) {
-      header { flex-direction: column; }
-      .logo { order: -1; margin-bottom: 15px; }
-      .nav-left, .nav-right { width: 100%; justify-content: center; }
-      .logo img { height: 45px; }
+    @media (max-width: 480px) {
       main { padding: 0 20px; margin-top: 40px; }
     }
 
     /* --- Footer Styles --- */
     footer { text-align: center; font-size: 14px; padding: 40px 20px; background-color: #f8f8f8; border-top: 1px solid #ddd; font-family: sans-serif; }
-    .footer-nav a { color: #555; text-decoration: none; margin: 0 15px; transition: color 0.3s; }
+    .footer-nav a { color: #555; text-decoration: none; margin: 0 15px; }
     .footer-nav a:hover { color: #000; }
     .copyright { margin-top: 20px; color: #999; }
   </style>
@@ -103,20 +143,27 @@
 <body>
 
   <header>
-    <nav class="nav-left">
-      <a href="index.html">Home</a> 
-      <a href="about.html">About</a>
-      <a href="investments.html">Investments</a>
-    </nav>
     <div class="logo">
       <a href="index.html">
-        <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Family Office Logo">
+        <img src="images/Bergvia_Logo_Black.png" alt="Bergvia Logo">
       </a>
     </div>
-    <nav class="nav-right">
+    <nav class="desktop-nav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="investments.html">Investments</a>
       <a href="contacts.html">Contacts</a>
     </nav>
+    <div class="mobile-menu-button" onclick="toggleMobileMenu()">☰</div>
   </header>
+
+  <div class="mobile-nav" id="mobileNav">
+    <div class="mobile-menu-close" onclick="toggleMobileMenu()">×</div>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="investments.html">Investments</a>
+    <a href="contacts.html">Contacts</a>
+  </div>
 
   <main>
     <h1>Privacy Policy</h1>
@@ -165,6 +212,12 @@
 managing the assets of a single family.
     </p>
   </footer>
+
+  <script>
+    function toggleMobileMenu() {
+      document.getElementById("mobileNav").classList.toggle("open");
+    }
+  </script>
 
 </body>
 </html>
