--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       cursor: pointer;
       color: #ffffff;
       text-shadow: 0 1px 2px rgba(0,0,0,0.6);
-      z-index: 3000; /* <-- FIX */
+      z-index: 2000; /* <-- FIX */
     }
 
     /* -----------------------------------------
@@ -238,6 +238,7 @@
 
   <!-- Mobile Slide-in Menu -->
   <div class="mobile-nav" id="mobileNav">
+    <div class="mobile-menu-close" onclick="toggleMobileMenu()">×</div
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="investments.html">Investments</a>
