--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
       cursor: pointer;
       color: #ffffff;
       text-shadow: 0 1px 2px rgba(0,0,0,0.6);
-      z-index: 3000;
+      z-index: 2000;
     }
     .mobile-nav {
       display: none;
@@ -179,6 +179,7 @@
   </header>
 
   <div class="mobile-nav" id="mobileNav">
+    <div class="mobile-menu-close" onclick="toggleMobileMenu()">×</div
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="investments.html">Investments</a>
