--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family.
         Our approach combines disciplined, long-term capital allocation across public and private markets with an entrepreneurial mindset,
         directly acquiring and building operating businesses with strong growth potential. Through this blended strategy, we aim to create
-        lasting value for future generations, the communities where we live, and the natural environment that sustains us.
+        lasting value for future generations, the communities where we live and the natural environment that sustains us.
       </p>
     </div>
 
