--- a/index.html
+++ b/index.html
@@ -97,7 +97,18 @@
       color: #000;
       font-family: sans-serif;
     }
-
+    
+.mobile-menu-close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 40px;
+  color: #000;
+  cursor: pointer;
+  font-family: sans-serif;
+  font-weight: 300;
+}
+    
     /* -----------------------------------------
        HERO SECTION
     ------------------------------------------*/
