--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
       cursor: pointer;
       color: #ffffff;
       text-shadow: 0 1px 2px rgba(0,0,0,0.6);
-      z-index: 2000;
+      z-index: 3000;
     }
     .mobile-nav {
       display: none;
@@ -84,6 +84,17 @@
       font-family: sans-serif;
     }
 
+    .mobile-menu-close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 40px;
+  color: #000;
+  cursor: pointer;
+  font-family: sans-serif;
+  font-weight: 300;
+}
+    
     /* --- CORRECTED Mobile Breakpoints --- */
     @media (max-width: 768px) {
       .desktop-nav { display: none; }
