--- a/investments.html
+++ b/investments.html
@@ -84,6 +84,18 @@
       font-family: sans-serif;
     }
 
+    .mobile-menu-close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 40px;
+  color: #000;
+  cursor: pointer;
+  font-family: sans-serif;
+  font-weight: 300;
+}
+    
+
     /* --- CORRECTED Mobile Breakpoints --- */
     @media (max-width: 768px) {
       .desktop-nav { display: none; }
