--- a/index.html
+++ b/index.html
@@ -16,60 +16,40 @@
     }
     a { text-decoration: none; }
 
-    /* --- HEADER & NAVIGATION (Copied from contacts.html) --- */
+    /* --- HEADER & NAVIGATION (Copied from working contacts.html) --- */
     header {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      z-index: 10;
+      z-index: 2000;
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
       box-sizing: border-box;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      flex-wrap: wrap;
       background: transparent;
     }
-    nav {
+    .desktop-nav {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
+      gap: 20px;
     }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
+    .desktop-nav a {
       color: #ffffff;
       font-family: sans-serif;
       font-size: 16px;
       letter-spacing: 1px;
-      transition: color 0.3s;
       text-shadow: 0 1px 2px rgba(0,0,0,0.5);
     }
-    nav a:hover,
-    nav a.active {
-      color: #fff;
+    .desktop-nav a:hover,
+    .desktop-nav a.active {
       text-decoration: underline;
     }
     .logo img {
       height: 70px;
       width: auto;
-      max-width: 100%;
-      transition: all 0.3s ease;
+      transition: 0.3s;
       filter: brightness(0) invert(1);
-    }
-
-    /* --- Mobile Adjustments for header (Copied from contacts.html) --- */
-    @media (max-width: 768px) {
-      header { flex-direction: row; justify-content: space-between; padding: 15px 20px; }
-      nav { display: none; } /* Hides desktop nav on mobile */
-      .mobile-menu-button { display: block; }
-      .logo img { height: 50px; }
-    }
-    @media (max-width: 480px) {
-      .logo img { height: 42px; }
     }
 
     /* --- MOBILE MENU (Copied & Corrected) --- */
@@ -79,10 +59,10 @@
       cursor: pointer;
       color: #ffffff;
       text-shadow: 0 1px 2px rgba(0,0,0,0.6);
-      z-index: 3000;
+      z-index: 2000; /* Lower than the menu panel */
     }
     .mobile-nav {
-      display: none;
+      display: none; /* Hidden by default */
       position: fixed;
       top: 0;
       right: -100%;
@@ -92,11 +72,39 @@
       padding: 80px 30px;
       box-sizing: border-box;
       transition: right 0.35s ease;
-      z-index: 2500;
+      z-index: 2500; /* Higher than the button */
     }
-    .mobile-nav.open { right: 0; }
-    .mobile-nav a { display: block; margin-bottom: 25px; font-size: 22px; color: #000; font-family: sans-serif; }
-    .mobile-menu-close { position: absolute; top: 20px; right: 30px; font-size: 40px; color: #000; cursor: pointer; font-family: sans-serif; font-weight: 300; }
+    .mobile-nav.open {
+      right: 0;
+    }
+    .mobile-nav a {
+      display: block;
+      margin-bottom: 25px;
+      font-size: 22px;
+      color: #000;
+      font-family: sans-serif;
+    }
+    .mobile-menu-close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 40px;
+      color: #000;
+      cursor: pointer;
+      font-family: sans-serif;
+      font-weight: 300;
+    }
+
+    /* --- Mobile Breakpoints (Copied from working contacts.html) --- */
+    @media (max-width: 768px) {
+      .desktop-nav { display: none; }
+      .mobile-menu-button { display: block; }
+      .logo img { height: 50px; }
+      .mobile-nav { display: block; } /* Make the panel exist on mobile */
+    }
+    @media (max-width: 480px) {
+      .logo img { height: 42px; }
+    }
 
 
     /* --- Full Screen Hero Section --- */
@@ -193,7 +201,10 @@
     <div class="hero-footer">
       <hr>
       <p>
-        Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family. Our approach combines disciplined, long-term capital allocation across public and private markets with an entrepreneurial mindset, directly acquiring and building operating businesses with strong growth potential. Through this blended strategy, we aim to create lasting value for future generations, the communities where we live, and the natural environment that sustains us.
+        Bergvia Family Office is a privately held investment company managing the assets and long-term interests of our family.
+        Our approach combines disciplined, long-term capital allocation across public and private markets with an entrepreneurial mindset,
+        directly acquiring and building operating businesses with strong growth potential. Through this blended strategy, we aim to create
+        lasting value for future generations, the communities where we live, and the natural environment that sustains us.
       </p>
     </div>
   </section>
